refactor: remove IndexField refactor: remove support for unique fields